[package]
name = "algors-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
algors-utils = { path = "../algors-utils" }

[dev-dependencies]
loom = "0.7"
proptest = "1.0"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
std = []
